--- a/style.css
+++ b/style.css
@@ -1,7 +1,31 @@
+
+body{
+    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto Slab', serif;
+}
+
+.letters{
+    padding-left: 40px;
+    width: 50%;
+}
 .start{
-    font-size: 25px;
+    font-size: 50px;
 }
 .owner{
     color: red;
-    font-weight: 600;
+}
+.intro{
+    font-size: 20px;
+}
+.underline{
+    color:green;
+}
+.half-width{
+    width: 50%;
+}
+.haf-width img{
+    width:100%;
+}
+section{
+    disply:flex;
 }
