--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
     font-family: 'Inter', sans-serif;
     font-family: 'Roboto Slab', serif;
-    padding-left: 80px;
+    margin: 0;
+    
 }
 .start{
     font-size: 50px;
@@ -31,6 +32,7 @@ p b{
     color: rgb(8, 130, 134);
 }
 .half-width{
+    padding-left: 80px;
     width: 50%;
 }
 section{
