--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 
    
-h3{
+.inro{
    color: green; 
    font-size: 30px;
 }
@@ -54,4 +54,31 @@ a{
     background-color: black;
     padding: 10px 20px;
     border-radius: 5px;
+}
+
+.top{
+    background-image: url(image/top-banner.png);
+    width: 100%;
+    margin: 0px;
+    background-repeat: no-repeat;
+    margin-bottom: 150px;
+}
+
+
+.middle-pic{
+    width: 50%
+
+}
+.middle-pic img{
+    width: 100%;
+}
+.details2{
+    padding-right: 50px;
+    
+}
+.middle{
+    background-image: url(image/middle-side.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    background-position: right;
 }
